Commit antes da Pre-Defesa

--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -70,7 +70,7 @@
                     <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Contacto</a>
+                    <a href="/Contacto/Index" class="nav-link">Contacto</a>
                 </li>
             </ul>
 
@@ -81,13 +81,13 @@
                 <li class="nav-item dropdown">
                     @await Component.InvokeAsync("Notificacoes")
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-item dropdown-header">9+ Notifications</span>
+                        <span class="dropdown-item dropdown-header">0 Notifications</span>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i> 4 new messages
+                            <i class="fas fa-envelope mr-2"></i> Nenhuma notificação encontrada
                             <span class="float-right text-muted text-sm">3 mins</span>
                         </a>
-                        <div class="dropdown-divider"></div>
+@*                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item">
                             <i class="fas fa-users mr-2"></i> 8 friend requests
                             <span class="float-right text-muted text-sm">12 hours</span>
@@ -96,7 +96,7 @@
                         <a href="#" class="dropdown-item">
                             <i class="fas fa-file mr-2"></i> 3 new reports
                             <span class="float-right text-muted text-sm">2 days</span>
-                        </a>
+                        </a> *@
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
@@ -156,7 +156,10 @@
                                 <li class="nav-item">
                                     <a href="#" onclick="pesquisarSocio()" class="nav-link">
                                         <i class="fas fa-search nav-icon"></i>
-                                        <p>Pesquisar</p>
+                                        <p>
+                                            Pesquisar
+                                            <span class="right badge badge-success">New</span>
+                                        </p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -233,7 +236,6 @@
                                 <i class="nav-icon fas fa-money-bill"></i>
                                 <p>
                                     Pagamentos
-                                    <span class="right badge badge-success">New</span>
                                 </p>
                             </a>
                         </li>
