--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Financeiro/Extrato.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Financeiro/Extrato.cshtml
@@ -25,11 +25,78 @@
     </div>
 </div>
 
-<a href="@Url.Action("ExtratoImprimir","Financeiro", new {id = @HttpContextAccessor.HttpContext.Session.GetString("userId"), area = "Socio"})" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Imprimir</a>
+<a href="@Url.Action("ExtratoImprimir","Financeiro", new {id = @HttpContextAccessor.HttpContext.Session.GetString("userId"), area = "Socio"})" rel="noopener" target="_blank" class="btn btn-primary" style="margin-bottom: 10px;"><i class="fas fa-print"></i> Imprimir</a>
+<br>
 
-@* <a href="#" onclick="imprimir()" rel="noopener" class="btn btn-default no-print"><i class="fas fa-print"></i> Imprimir</a>
 
-<a href="" class="dropdown-item">Extrato Financeiro</a> *@
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col--md-8">
+            <div class="table">
+                <table class="table table-bordered stripe">
+                    <thead>
+                        <tr>
+                            <td colspan="3" class="text-center text-bold bg-cyan">SALDO</td>
+                        </tr>
+                        <tr>
+                            <th class="text-left" style="width: 50px">Data</th>
+                            <th class="text-left">Recibo</th>
+                            <th class="text-left">Valor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var saldo in ViewBag.Saldo)
+                        {
+                            <tr role="row" class="">
+                                <td class="text-left">@saldo.DataPagamento.ToString("dd/MM/yyyy")</td>
+                                <td class="text-left">@saldo.Recibo</td>
+                                <td class="text-left">@saldo.Valor</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+
+<div class="container">
+   <div class="row justify-content-center">
+        <div class="col--md-8">
+            <div class="table">
+                <table class="table table-bordered stripe">
+                    <thead>
+                        <tr>
+                            <td colspan="3" class="text-center text-bold bg-cyan">PAGAMENTOS POR REGULARIZAR</td>
+                        </tr>
+                        <tr>
+                            <th class="text-left">Descrião</th>
+                            <th class="text-left">Mês</th>
+                            <th class="text-left">Valor (KZ)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var itens in ViewBag.Itens)
+                        {
+                            <tr role="row" class="">
+                                <td class="text-left">@itens.Descricao</td>
+                                <td class="text-left">@itens.CodPeriodo</td>
+                                <td class="text-left">@itens.Valor</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+   </div>
+</div>
+
+
+
+
+
+
 
 <!-- Main content -->
 <section class="content">
