--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Home/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Home/Index.cshtml
@@ -2,3 +2,55 @@
 @{
     ViewData["Title"] = "Página Inicial";
 }
+
+
+
+
+<br>
+<br>
+
+<div class="card card-success">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12 col-lg-6 col-xl-4">
+                <div class="card mb-2 bg-gradient-dark">
+                    <img class="card-img-top" src="~/dist/img/photo1.png" alt="Dist Photo 1">
+                    <div class="card-img-overlay d-flex flex-column justify-content-end">
+                        <h5 class="card-title text-primary text-white">Apoio na doença</h5>
+                        <p class="card-text text-white pb-2 pt-1">Em caso de doença, prestamos o máximo apoio e auxiliamos na sua recuperação.</p>
+                        <a href="#" class="text-white">Última atualização, há 3 dias</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-6 col-xl-4">
+                <div class="card mb-2">
+                    <img class="card-img-top" src="~/dist/img/photo2.png" alt="Dist Photo 2">
+                    <div class="card-img-overlay d-flex flex-column justify-content-center">
+                        <h5 class="card-title text-white mt-5 pt-2">Apoio fúnebre</h5>
+                        <p class="card-text pb-2 pt-1 text-white">
+                            Em caso de morte do assoiado, <br>
+                            ou de um elemento do seu <br>
+                            agregado, estaremos presentes.
+                        </p>
+                        <a href="#" class="text-white">Última atualização, há 15 dias</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-6 col-xl-4">
+                <div class="card mb-2">
+                    <img class="card-img-top" src="~/dist/img/photo3.jpg" alt="Dist Photo 3">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title text-primary">Adianntamento salarial</h5>
+                        <p class="card-text pb-1 pt-1 text-white">
+                            Adiantamos até 3 salários <br>
+                            aos nossos associados,<br>
+                            tornando os seus projectos <br>
+                            imparáveis.
+                        </p>
+                        <a href="#" class="text-primary">Última atualização, há 23 dias</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
