--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Pagamento/RegistarPagamento.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Pagamento/RegistarPagamento.cshtml
@@ -47,9 +47,7 @@
                                         <tr>
                                             <th class="text-left" style="display:none">ID</th>
                                             <th class="text-left" style="width: 50px">Data</th>
-                                            <th class="text-left">Recibo</th>
                                             <th class="text-left">Valor</th>
-                                            <th class="text-left" style="display:none">Pagamento</th>
                                             <th class="text-right">Opção</th>
                                         </tr>
                                     </thead>
@@ -58,10 +56,8 @@
                                         {
                                             <tr role="row" class="">
                                                 <td class="text-left" style="display:none">@saldo.Id</td>
-                                                <td class="text-left">@saldo.DataPagamento.ToString("dd/MM/yyyy")</td>
-                                                <td class="text-left">@saldo.Recibo</td>
+                                                <td class="text-left">@saldo.DataCriacao.ToString("dd/MM/yyyy")</td>
                                                 <td class="text-left">@saldo.Valor</td>
-                                                <td class="text-left" style="display:none">@saldo.PagamentoId</td>
                                                 <td class="text-right">
                                                     <div class="icheck-success d-inline">
                                                         <input type="radio" name="opcaoSaldo" checked id="saldo">
