--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Socio/Details.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Socio/Details.cshtml
@@ -149,10 +149,10 @@
 								<a class="btn btn-app bg-info" href="@Url.Action("Efectuar-Pagamento","Pagamento", new {id = @Model.Id})" >
 									<i class="fas fa-credit-card"></i> Efectuar Pagamento
 								</a>
-
+								@* @saldo.Recibo
 								<a class="btn btn-app bg-success" href="@Url.Action("Unir-Recibo","Pagamento", new {id = @Model.Id})">
 									<i class="fas fa-link"></i> Unir Recibos
-								</a>
+								</a> *@
 								<a class="btn btn-app bg-yellow" href="@Url.Action("Extrato","Pagamento", new {id = @Model.Id})">
 									<i class="fas fa-chart-line"></i> Extracto
 								</a>
@@ -170,7 +170,7 @@
                                                 </tr>
 												<tr>
 													<th class="text-left" style="width: 50px">Data</th>
-													<th class="text-left">Recibo</th>
+													@* <th class="text-left">Recibo</th> *@
 													<th class="text-left">Valor</th>
 												</tr>
 											</thead>
@@ -178,8 +178,8 @@
 												@foreach (var saldo in ViewBag.Saldo)
 												{
 													<tr role="row" class="">
-														<td class="text-left">@saldo.DataPagamento.ToString("dd/MM/yyyy")</td>
-														<td class="text-left">@saldo.Recibo</td>
+														<td class="text-left">@saldo.DataCriacao.ToString("dd/MM/yyyy")</td>
+														@* <td class="text-left">@saldo.Recibo</td> *@
 														<td class="text-left">@saldo.Valor</td>
 													</tr>
 												}
