Antes da defesa final

--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -85,7 +85,7 @@
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item">
                             <i class="fas fa-envelope mr-2"></i> Nenhuma notificação encontrada
-                            <span class="float-right text-muted text-sm">3 mins</span>
+                            @* <span class="float-right text-muted text-sm">3 mins</span> *@
                         </a>
 @*                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item">
@@ -169,6 +169,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="/SolicitacoesDeclaracao/Index" class="nav-link">
+                                        <i class="fas fa-address-card nav-icon"></i>
+                                        <p>Solicitações de Decl.</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="/Socio/Index" class="nav-link">
                                         <i class="fas fa-eye nav-icon"></i>
                                         <p>Visualizar Todos</p>
@@ -188,7 +194,7 @@
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="#" onclick="pesquisarPAApoio()" class="nav-link">
-                                        <i class="fas fa-plus-square  nav-icon"></i>
+                                        <i class="far fa-plus-square  nav-icon"></i>
                                         <p>Atribuir Apoio</p>
                                     </a>
                                 </li>
