--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Dependente/Criar.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Dependente/Criar.cshtml
@@ -67,7 +67,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" onclick="AdicionarAgregado()" class="btn btn-success waves-effect">Salvar</button>
-                <button type="button" class="btn btn-link waves-effect" asp-controller="Agregado" asp-action="Index">Cancelar</button>
+                <button type="button" class="btn btn-link waves-effect" data-bs-dismiss="modal">Cancelar</button>
             </div>
         </div>
     </div>
