--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
                             <div class="dropdown-divider"></div>
                             <a href="#" class="dropdown-item">
                             <i class="fas fa-envelope mr-2"></i> Nenhuma notificação encontrada
-                                <span class="float-right text-muted text-sm">3 mins</span>
+                                @* <span class="float-right text-muted text-sm">3 mins</span> *@
                             </a>
 @*                             <div class="dropdown-divider"></div>
                             <a href="#" class="dropdown-item">
@@ -197,7 +197,7 @@
                                     <li class="nav-item">
                                         <a href="/SolicitacoesDeclaracao/Index" class="nav-link">
                                             <i class="fas  fa-hands-helping nav-icon"></i>
-                                            <p>Solicitações</p>
+                                            <p>Solicitações de Decl.</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
