--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Financeiro/Extrato.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Socio/Views/Financeiro/Extrato.cshtml
@@ -39,8 +39,7 @@
                             <td colspan="3" class="text-center text-bold bg-cyan">SALDO</td>
                         </tr>
                         <tr>
-                            <th class="text-left" style="width: 50px">Data</th>
-                            <th class="text-left">Recibo</th>
+                            <th class="text-left" style="width: 100px">Data</th>
                             <th class="text-left">Valor</th>
                         </tr>
                     </thead>
@@ -48,8 +47,7 @@
                         @foreach (var saldo in ViewBag.Saldo)
                         {
                             <tr role="row" class="">
-                                <td class="text-left">@saldo.DataPagamento.ToString("dd/MM/yyyy")</td>
-                                <td class="text-left">@saldo.Recibo</td>
+                                <td class="text-left">@saldo.DataCriacao.ToString("dd/MM/yyyy")</td>
                                 <td class="text-left">@saldo.Valor</td>
                             </tr>
                         }
